--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "author": "Kent Warren",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.10.3",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
+    "@babel/plugin-transform-runtime": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
